Tạm commit thay đổi trước khi merge code từ GitHub

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h1>🔍 Image Search System</h1>
+  <h1> Image Search System</h1>
   <form method="post" enctype="multipart/form-data" action="/search_local">
     <input type="file" name="file" accept="image/*" required />
     <button type="submit">Tìm ảnh tương tự</button>
